# talos-ros-robot

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/os5000/: os5000Config.h
devel/lib/os5000/: os5000
devel/lib/pkgconfig/: os5000.pc
devel/lib/python2.7/dist-packages/os5000/cfg/: os5000Config.py
devel/share/os5000/cmake/: os5000Config.cmake
devel/share/os5000/docs/: os5000Config-usage.dox  os5000Config.dox  os5000Config.wikidoc
src/imu_quat_to_euler/: CMakeLists.txt  package.xml
src/imu_quat_to_euler/launch/: imu_quat_to_euler (copy).launch  imu_quat_to_euler.launch
src/imu_quat_to_euler/scripts/: quat_to_euler.py
src/ndvi_ros/: ndvi_ros.py
src/os5000/: README.md
src/os5000/cfg/: os5000.cfg
src/os5000/launch/: os5000.launch
